--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "react-native run-ios --simulator='iPhone 14'",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
@@ -19,10 +19,13 @@
     "react": "18.2.0",
     "react-i18next": "^12.2.2",
     "react-native": "0.71.7",
+    "react-native-flipper": "^0.176.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
-    "react-redux": "^8.0.5"
+    "react-native-webview": "^12.0.2",
+    "react-redux": "^8.0.5",
+    "redux-flipper": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
