--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "deps": "yarn && cd ios && pod install"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "i18next": "^22.4.15",
     "react": "18.2.0",
     "react-i18next": "^12.2.2",
@@ -25,7 +27,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-webview": "^12.0.2",
     "react-redux": "^8.0.5",
-    "redux-flipper": "^2.0.2"
+    "redux-flipper": "^2.0.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
