--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "18.2.0",
     "react-i18next": "^12.2.2",
     "react-native": "0.71.7",
-    "react-native-flipper": "^0.176.0",
+    "react-native-flipper": "0.163.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
