--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.71.7",
     "react-native-flipper": "0.163.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-webview": "^12.0.2",
