--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "i18next": "^22.4.15",
+    "luxon": "^3.3.0",
     "react": "18.2.0",
     "react-i18next": "^12.2.2",
     "react-native": "0.71.7",
@@ -38,6 +39,7 @@
     "@react-native-community/eslint-config": "^3.2.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
+    "@types/luxon": "^3.3.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
