--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios --simulator='iPhone 14'",
+    "ios": "react-native run-ios --simulator='iPhone 14 Pro'",
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
@@ -17,7 +17,10 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "@shopify/flash-list": "^1.5.0",
+    "@shopify/react-native-skia": "^0.1.197",
     "axios": "^1.4.0",
+    "carousel-with-pagination-rn": "^1.1.8",
     "i18next": "^22.4.15",
     "luxon": "^3.3.0",
     "react": "18.2.0",
@@ -28,6 +31,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
     "react-native-webview": "^12.0.2",
     "react-redux": "^8.0.5",
     "redux-flipper": "^2.0.2",
@@ -48,6 +52,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
+    "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
