--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-i18next": "^12.2.2",
     "react-native": "0.71.7",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-flipper": "0.163.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
