--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.4.0",
     "carousel-with-pagination-rn": "^1.1.8",
     "i18next": "^22.4.15",
+    "lottie-react-native": "^6.2.0",
     "luxon": "^3.3.0",
     "react": "18.2.0",
     "react-i18next": "^12.2.2",
