--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/blur": "^4.3.2",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
