--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
-    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/blur": "^4.3.2",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/native": "^6.1.6",
@@ -27,6 +27,7 @@
     "lottie-react-native": "^6.2.0",
     "luxon": "^3.3.0",
     "react": "18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-i18next": "^12.2.2",
     "react-native": "0.71.11",
     "react-native-country-picker-modal": "^2.0.0",
@@ -51,7 +52,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/luxon": "^3.3.0",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
