--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         googlePlayServicesAuthVersion = "19.2.0" // <--- use this version or newer
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
+                kotlinVersion = "1.8.0"
+
     }
     repositories {
         google()
