--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-clipboard/clipboard": "^1.12.1",
+    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/blur": "^4.3.2",
     "@react-native-google-signin/google-signin": "^10.0.1",
-    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.9.12",
-    "@react-navigation/stack": "^6.3.16",
+    "@react-navigation/stack": "^6.2.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@rnx-kit/align-deps": "^2.2.5",
     "@shopify/flash-list": "^1.5.0",
     "@shopify/react-native-skia": "^0.1.197",
     "axios": "^1.4.0",
@@ -30,18 +31,19 @@
     "react": "18.2.0",
     "react-content-loader": "^6.2.1",
     "react-i18next": "^12.2.2",
-    "react-native": "0.71.11",
+    "react-native": "^0.72.0",
     "react-native-bootsplash": "^5.1.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-flipper": "0.163.0",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.2",
-    "react-native-reanimated": "^3.4.2",
-    "react-native-safe-area-context": "^4.5.1",
-    "react-native-screens": "^3.20.0",
-    "react-native-svg": "^13.9.0",
-    "react-native-webview": "^12.0.2",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.21.0",
+    "react-native-shadow-2": "^7.0.8",
+    "react-native-svg": "^13.14.0",
+    "react-native-webview": "^13.2.2",
     "react-redux": "^8.0.5",
     "redux-flipper": "^2.0.2",
     "redux-persist": "^6.0.0"
@@ -51,6 +53,7 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/metro-config": "^0.72.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/luxon": "^3.3.0",
@@ -59,7 +62,7 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.73.9",
+    "metro-react-native-babel-preset": "^0.76.5",
     "prettier": "^2.4.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
@@ -67,5 +70,35 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "engines": {
+    "node": ">=16"
+  },
+  "rnx-kit": {
+    "kitType": "app",
+    "alignDeps": {
+      "requirements": [
+        "react-native@0.72"
+      ],
+      "capabilities": [
+        "animation",
+        "babel-preset-react-native",
+        "clipboard",
+        "core",
+        "core-android",
+        "core-ios",
+        "gestures",
+        "jest",
+        "navigation/native",
+        "navigation/stack",
+        "react",
+        "react-test-renderer",
+        "safe-area",
+        "screens",
+        "storage",
+        "svg",
+        "webview"
+      ]
+    }
   }
 }
