--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-webview": "^13.2.2",
     "react-redux": "^8.0.5",
     "redux-flipper": "^2.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
