--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-screens": "^3.21.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "^13.14.0",
+    "react-native-version-check": "^3.4.7",
     "react-native-webview": "^13.2.2",
     "react-redux": "^8.0.5",
     "redux-flipper": "^2.0.2",
@@ -60,6 +61,7 @@
     "@types/jest": "^29.2.1",
     "@types/luxon": "^3.3.0",
     "@types/react": "^18.2.0",
+    "@types/react-native-version-check": "^3.4.8",
     "@types/react-test-renderer": "^18.0.0",
     "@types/webpack-env": "^1.18.4",
     "babel-jest": "^29.2.1",
