--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "deps": "yarn && cd ios && pod install"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.0.1",
     "@gorhom/bottom-sheet": "^4",
+    "@invertase/react-native-apple-authentication": "^2.3.0",
     "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/blur": "^4.3.2",
