--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-flipper": "0.163.0",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-google-mobile-ads": "^12.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-reanimated": "^3.3.0",
