--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "OVRPWRD",
   "displayName": "OVRPWRD",
   "react-native-google-mobile-ads": {
-    "android_app_id": "ca-app-pub-xxxxxxxx~xxxxxxxx",
+    "android_app_id": "ca-app-pub-9280461977904939~1921015357",
     "ios_app_id": "ca-app-pub-9280461977904939~5303100435"
   }
 }
