--- a/ios/OVRPWRD/Info.plist
+++ b/ios/OVRPWRD/Info.plist
@@ -27,7 +27,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.1071597093913-5r2fjivtgrnnha1gsft7jt6flfr3dsj1</string>
+				<string>com.googleusercontent.apps.777683301792-sniotqj24feei5gq0rr80g0u3tlpkc6s</string>
 			</array>
 		</dict>
 	</array>
@@ -78,8 +78,12 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+	</array>
+	<key>UISupportedInterfaceOrientations~ipad</key>
+	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
