--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.4.0",
     "carousel-with-pagination-rn": "^1.1.8",
     "i18next": "^22.4.15",
+    "jwt-decode": "^4.0.0",
     "lottie-react-native": "^6.2.0",
     "luxon": "^3.3.0",
     "react": "18.2.0",
@@ -43,12 +44,14 @@
     "react-native-google-mobile-ads": "^12.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-purchases": "^7.19.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "^13.14.0",
     "react-native-webview": "^13.2.2",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-redux": "^8.0.5",
     "redux-flipper": "^2.0.2",
     "redux-persist": "^6.0.0",
