--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.2",
     "react-native-purchases": "^7.19.0",
+    "react-native-purchases-ui": "^7.19.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.0",
     "react-native-shadow-2": "^7.0.8",
     "react-native-svg": "^13.14.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-webview": "^13.2.2",
     "react-native-youtube-iframe": "^2.3.0",
     "react-redux": "^8.0.5",
