--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,12 +93,12 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.ovrpwrd"
+    namespace "app.ovrpwrd"
     defaultConfig {
-        applicationId "com.ovrpwrd"
+        applicationId "app.ovrpwrd"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 2
+        versionCode 3
         versionName "1.0"
     }
 
