--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deps": "yarn && cd ios && pod install"
   },
   "dependencies": {
+    "@amplitude/analytics-react-native": "^1.4.7",
     "@expo/react-native-action-sheet": "^4.0.1",
     "@gorhom/bottom-sheet": "^4",
     "@invertase/react-native-apple-authentication": "^2.3.0",
